--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,16 +8,17 @@ services:
     build: ./backend
     ports:
       - "5000:5000"
+    command: node app.js
     volumes:
       - models:/app/models
-      - ./backend/app
-      - app/node_modules
+      - ./backend/app:/app/backend/app  
     depends_on:
       - mongodb
   frontend:
     build: ./frontend
     ports:
       - "3000:3000"
+    command: npm run dev
     volumes:
       - ./frontend/src:/app/src
     stdin_open: true
