--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "vite-plugin-react": "^4.0.1",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -28,6 +31,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0"
+    "vite": "^5.1.4"
   }
 }
