--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,15 @@
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^7.2.0",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
     "vite-plugin-react": "^4.0.1",
     "zustand": "^4.5.1"
   },
