--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
+    "react-datepicker": "^6.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.4.0",
