--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,36 +1,20 @@
-# syntax=docker/dockerfile:1
+# Use the official Node.js 14 image
+FROM node:14
 
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Dockerfile reference guide at
-# https://docs.docker.com/go/dockerfile-reference/
+# Set the working directory
+WORKDIR /app
 
-ARG NODE_VERSION=18.18.0
+# Copy package.json and package-lock.json
+COPY package*.json ./
 
-FROM node:${NODE_VERSION}-alpine
+# Install dependencies
+RUN npm install
 
-# Use production node environment by default.
-ENV NODE_ENV production
-
-
-WORKDIR /usr/src/app
-
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.npm to speed up subsequent builds.
-# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
-# into this layer.
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm \
-    npm ci --omit=dev
-
-# Run the application as a non-root user.
-USER node
-
-# Copy the rest of the source files into the image.
+# Copy the rest of the application
 COPY . .
 
-# Expose the port that the application listens on.
+# Expose port
 EXPOSE 5000
 
-# Run the application.
-CMD node app.js
+# Command to run the backend server
+CMD ["npm", "start"]
