updated dockerfile for frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,6 @@
-# Use the official Node.js 18.18.0 image
+# Stage 1 - Build React application
 FROM node:18.18.0 as build
 
-# Set the working directory
 WORKDIR /app
 
 # Copy package.json and package-lock.json
@@ -13,8 +12,19 @@ RUN npm install
 # Copy the rest of the application
 COPY . .
 
-# Expose port
-EXPOSE 5000
+# Build the React application
+RUN npm run build
 
-# Command to run the backend server
-CMD ["npm", "start"]
+# Stage 2 - Production build with Nginx
+FROM nginx:alpine
+
+# Remove default nginx website
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copy built React app to Nginx directory
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Expose port
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
